# dotr

./: .gitignore  .travis.yml  Cargo.toml  README.md  README.tpl  flake.nix
.config/flakebox/: id
.config/selfci/: ci.sh
.github/workflows/: flakebox-ci.yml
src/: bin.rs  lib.rs  main.rs  opts.rs  tests.rs
