cargo-features = ["edition"]

[package]
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Very simple dotfile manager"
documentation = "https://docs.rs/dotr/"
homepage = "https://github.com/dpc/dotr"
keywords = ["rc", "dot", "dotfile"]
license = "MPL-2.0"
name = "dotr"
readme = "README.md"
repository = "https://github.com/dpc/dotr"
version = "0.4.0"
edition = '2018'

[[bin]]
name = "dotr"
path = "src/bin.rs"

[dependencies]
clap = "2"
serde = "1"
serde_derive = "1"
slog-async = "2"
slog-term = "2"
tempdir = "*"
toml = "0.4"
walkdir = "2"

[dependencies.slog]
features = ["max_level_trace", "release_max_level_trace"]
version = "2"

