[package]
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Very simple dotfile manager"
documentation = "https://docs.rs/dotr/"
homepage = "https://github.com/dpc/dotr"
keywords = ["rc", "dot", "dotfile"]
license = "MPL-2.0"
name = "dotr"
readme = "README.md"
repository = "https://github.com/dpc/dotr"
version = "0.4.0"
edition = '2018'

[[bin]]
name = "dotr"
path = "src/bin.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
tempdir = "*"
toml = "0.4"
walkdir = "2"
tracing = "*"
clap-verbosity-flag = "2.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
anyhow = "1.0.80"

[profile]

[profile.ci]
inherits = "dev"
incremental = false
debug = "line-tables-only"
lto = "off"

[profile.release]
strip = true
